--- a/DiscordoRPC/DiscordoRPC/Info.plist
+++ b/DiscordoRPC/DiscordoRPC/Info.plist
@@ -2,11 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.automation.apple-events</key>
+	<key>NSSupportsAutomaticTermination</key>
+	<false/>
+	<key>NSSupportsSuddenTermination</key>
 	<true/>
-	<key>com.apple.security.temporary-exception.apple-events</key>
-	<array>
-		<string>com.apple.dt.Xcode</string>
-	</array>
 </dict>
 </plist>
